--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
           <div class="col-4">
             <div class="card">
               <div class="card-header">
-                
+                Victor Reyes
               </div>
               <div class="card-body">
-                <h5 class="card-title"></h5>
+                <h5 class="card-title">Hobbies</h5>
                 <ul>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
+                  <li>Natacion</li>
+                  <li>Basquetbol</li>
+                  <li>Tecnologia</li>
+                  <li>Musica</li>
                 </ul>
               </div>
             </div>
