--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
           <div class="col-4">
             <div class="card">
               <div class="card-header">
-                
+                Francisco Manuel Martínez Ibarra
               </div>
               <div class="card-body">
-                <h5 class="card-title"></h5>
+                <h5 class="card-title">Hobbies</h5>
                <ul>
-                 <li></li>
-                 <li></li>
-                 <li></li>
-                 <li></li>
+                 <li>Ver peliculas</li>
+                 <li>Jugar baseball</li>
+                 <li>Ir al cine</li>
+                 <li>Impresión 3D</li>
                </ul>
               </div>
             </div>
