--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 
               </div>
               <div class="card-body">
-                <h5 class="card-title"> </h5>
+                <h5 class="card-title"> Lenny Innel Cocom Pedraza </h5>
                 <ul>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
+                  <li>Patinar</li>
+                  <li>Salir a pasear a mi mascota</li>
+                  <li>Ver peliculas</li>
+                  <li>Escuchar música</li>
                 </ul>
               </div>
             </div>
