--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <div class="col-4">
             <div class="card">
               <div class="card-header">
-                
+                Lenny Innel Cocom 
               </div>
               <div class="card-body">
-                <h5 class="card-title"> Lenny Innel Cocom Pedraza </h5>
+                <h5 class="card-title"> Hobbies</h5>
                 <ul>
                   <li>Patinar</li>
                   <li>Salir a pasear a mi mascota</li>
